--- a/Jitterbug/zh-Hans.lproj/Localizable.strings
+++ b/Jitterbug/zh-Hans.lproj/Localizable.strings
@@ -14,6 +14,9 @@
 "Support Files" = "支持文件";
 
 /* No comment provided by engineer. */
+"Launcher" = "启动器";
+
+/* No comment provided by engineer. */
 "ImageMountFailed" = "无法加载镜像";
 
 /* No comment provided by engineer. */
