FileSelectionView:use urls.count == 0 instead of urls.isEmpty Fix SupportFilesView button text mistake.

--- a/Jitterbug/zh-Hans.lproj/Localizable.strings
+++ b/Jitterbug/zh-Hans.lproj/Localizable.strings
@@ -220,3 +220,8 @@
 "Select the file below the list." = "请在列表中选择文件。";
 
 "You should select the file that matches the target device." = "您应该选择与目标设备匹配的文件。";
+
+"Import Pairings" = "导入配对文件";
+
+"Import Support Files" = "导入支持文件";
+
